# install_proper_polars

./: LICENSE  README.md  main.py  pyproject.toml  say_hello.py  setup.py
.github/workflows/: testing.yml
src/install_proper_polars/: utils.py
