[project]
name = "install-proper-polars"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["authors"]
dependencies = [
    "py-cpuinfo>=9.0.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1", "py-cpuinfo>=9.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["install_proper_polars*"]  # package names should match these glob patterns (["*"] by default)