[project]
name = "install-proper-polars"
version = "0.1.6"
description = "Select polars package depending on machine platform"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["authors"]
dependencies = [
    "polars; platform_machine=='AMD64'",
    "polars-lts-cpu; platform_machine=='ARM64,X86_64'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
