[project]
name = "install-proper-polars"
version = "0.1.6"
description = "Select polars package depending on machine platform"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["authors"]
dependencies = [
    "polars; platform_machine=='x86_64 or AMD64'",
    "polars-lts-cpu; platform_machine=='ARM64'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
